# ChiDG

./: .buildinfo  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  ChiDG.cfg  FlexDG.cfg  Jenkinsfile  LICENSE  README  README.md  TODO  genindex.html  index.html  objects.inv  search.html  searchindex.js  tags
reg_testing/equations/: CMakeLists.txt  rtest_duallinearadvection_mod.pf  rtest_linearadvection_implicit_convergence.pf  rtest_linearadvection_mod.pf  test_dummy.pf
src/: CMakeLists.txt  ChiDG.f90  FlexDG.f90  driver.f90  driver_acousticbox.f90  driver_acousticbox_chimera.f90  dummy_driver.f90
src/actions/: CMakeLists.txt
src/boundary_conditions/: .atype_bc.f90.swp  .bc_periodic.f90.swp  .type_bcset.f90.swp  .type_bcwrapper.f90.swp  CMakeLists.txt  README  atype_bc.f90  bc_empty.f90  bc_periodic.f90  mock_bc.f90  mod_bc.f90  type_bc.f90  type_bc_coupled_element.f90  type_bc_coupling.f90  type_bc_element_coupling.f90  type_bc_function.f90  type_bc_group.f90  type_bc_group_data.f90  type_bc_operator.f90  type_bc_operator_wrapper.f90  type_bc_patch.f90  type_bc_patch_data.f90  type_bc_patch_group.f90  type_bc_state.f90  type_bc_state_group.f90  type_bc_state_wrapper.f90  type_bcdata.f90  type_bcfunction.f90  type_bcfunction_set.f90  type_bcproperty.f90  type_bcproperty_set.f90  type_bcset.f90  type_bcset_coupling.f90  type_bcwrapper.f90  type_domain_patch_data.f90  type_element_coupling_data.f90
src/chidg/: ;w  CMakeLists.txt  type_chidg.f90  type_chidgData.f90  type_chidg_data.f90  type_chidg_discretization.f90  type_chidg_driver.f90  type_chidg_manager.f90  type_chidg_worker.f90  type_chidg_worker_temp.f90
src/chimera/: CMakeLists.txt  README  mod_chimera.f90  type_chimera.f90  type_chimera_donor.f90  type_chimera_donor_data.f90  type_chimera_receiver.f90  type_chimera_receiver_data.f90  type_chimera_receiver_old.f90  type_chimera_send.f90
src/constants/: CMakeLists.txt  README  mod_constants.f90  mod_kinds.f90  mod_kinds.f90.in  mod_version.f90  mod_version.f90.in
src/containers/: '  CMakeLists.txt  messenger.inc  mod_solverdata.f90  operator_block_dot.f90  operator_block_mv.f90  operator_chidg_dot.f90  operator_chidg_mv.f90  operator_domain_dot.f90  operator_dot.f90  operator_mv.f90  type_ADvector.f90  type_bcvector.f90  type_blockmatrix.f90  type_blockvector.f90  type_chidgMatrix.f90  type_chidgVector.f90  type_chidgVector_recv.f90  type_chidgVector_recv_comm.f90  type_chidgVector_send.f90  type_chidgVector_send_comm.f90  type_chidg_adjoint.f90  type_chidg_adjointbc.f90  type_chidg_adjointx.f90  type_chidg_functional.f90  type_chidg_matrix.f90  type_chidg_vector.f90  type_chidg_vector_recv.f90  type_chidg_vector_recv_comm.f90  type_chidg_vector_send.f90  type_chidg_vector_send_comm.f90  type_denseblock.F90  type_denseblock.f90  type_densematrix.f90  type_densematrix_vector.f90  type_densevector.f90  type_dict.f90  type_domain_matrix.f90  type_domain_vector.f90  type_edge_info.f90  (+46 more)
src/dgemv/: CMakeLists.txt  mod_dgemv.f90
src/diffusion/: CMakeLists.txt  mod_diffusion.f90  type_BR2.f90  type_BR2_face.f90  type_BR2_face_data.f90  type_BR2_lift.f90  type_BR2_lift_diff.f90
src/driver_configs/: driver_airfoil_truncated.f90  driver_cylinder.f90  driver_smoothbump.f90
src/drivers/: CMakeLists.txt  driver_wall_distance.f90  mod_mesh_motion.f90  mod_wall_distance.f90
src/equations/: CMakeLists.txt  atype_boundary_flux.f90  atype_equationset.f90  atype_flux.f90  atype_volume_flux.f90  eqn_empty.f90  mock_equation_set.f90  mock_equationset.f90  mock_model.f90  mod_equations.f90  mod_models.f90  mod_operators.f90  type_bc.f90  type_bc_operator.f90  type_bc_operator_wrapper.f90  type_bc_patch.f90  type_boundary_flux.f90  type_boundary_flux_wrapper.f90  type_boundary_operator.f90  type_equation.f90  type_equation_builder.f90  type_equation_builder_wrapper.f90  type_equation_set.f90  type_equation_set_wrapper.f90  type_equationset.f90  type_equationset_function_data.f90  type_equationset_wrapper.f90  type_field.f90  type_flux.f90  type_flux_wrapper.f90  type_model.f90  type_model_wrapper.f90  type_operator.f90  type_operator_wrapper.f90  type_properties.f90  type_pseudo_timestep.f90  type_volume_flux.f90  type_volume_flux_wrapper.f90  type_volume_operator.f90
src/fluids/: atype_fluid.f90
src/functionals/: CMakeLists.txt  mod_functional.f90  mod_functional_operators.f90  mod_update_functionals.f90  type_evaluator.f90  type_functional_group.f90  type_functional_wrapper.f90
src/functions/: CMakeLists.txt  atype_function.f90  mod_function.f90  mod_testfcn.f90  type_function.f90  type_function_wrapper.f90
src/grid/: .type_domain.f90.swp  .type_element.f90.swp  .type_face.f90.swp  .type_mesh.f90.swp  CMakeLists.txt  README  mod_DNAD_tools.f90  mod_chidg_interpolate.f90  mod_connectivity_tools.f90  mod_differentiate.f90  mod_element_mapping.f90  mod_geometry.f90  mod_grid.f90  mod_grid_operators.f90  mod_grid_tools.f90  mod_grid_tools_two.f90  mod_interpolate.f90  mod_interpolate.old  mod_prototype.f90  mod_reference_elements.f90  type_block.f90  type_boundary_connectivity.f90  type_chimera.f90  type_chimera_receiver.f90  type_connectivity.f90  type_domain.f90  type_domain_connectivity.f90  type_domain_info.f90  type_domaininfo.f90  type_element.f90  type_element_connectivity.f90  type_face.f90  type_face_connectivity.f90  type_geometry.f90  type_mesh.f90  type_mesh_new.f90  type_meshdata.f90  type_node.f90  type_point.f90  type_point_ad.f90  (+3 more)
src/interfaces/: CMakeLists.txt  README  f90wrap_mod_equations.f90.in  f90wrap_type_chidg.f90.in  f90wrap_type_equation_set.f90.in  f90wrap_type_function.f90.in  setup.py.in
src/io/: .mod_hdfio.f90.swp  CMakeLists.txt  H5toTEC.f90  HDF5toTEC.f90  README.txt  README.txt~  hdf5_dgtools.f90  hdf5_interface.f90  hdf5_interface.mod  mod_HB_interpolate.f90  mod_HB_post.f90  mod_chimera_io.f90  mod_datafile_io.f90  mod_file_utilities.f90  mod_gmsh.f90  mod_hdf_utilities.f90  mod_hdfio.f90  mod_io.f90  mod_matplotlib_io.f90  mod_plot3d_utilities.f90  (+13 more)
unit_testing/: CMakeLists.txt
unittests/: CMakeLists.txt
(+2480 files in other folders)
